finish README for project and set up SQL database

--- a/HairSalon/appsettings.json
+++ b/HairSalon/appsettings.json
@@ -1,5 +1,5 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;Port=3306;database=restaurants;uid=root;pwd=epicodus;"
+        "DefaultConnection": "Server=localhost;Port=3306;database=Will_Quanstrom;uid=root;pwd=epicodus;"
     }
 }
